# trading-bot

./: .gitignore  Cargo.toml  README.md  stock_data.json  todo.text
.cargo/: config.toml.example
.github/workflows/: rust-ci.yml  rust-clippy.yml
analysis-nn/: futurepredict.py  lstmpandas.py  requirements.txt  testing.py
data-collect/: Cargo.toml
data-collect/src/: config.rs  fetcher.rs  main.rs  preprocessing.rs  utils.rs
src/: realtime_data.rs
src/data-analyzer/: Cargo.toml
src/data-fetch/: Cargo.toml
src/data-fetch/src/: .env  __main__.py  fetcher.rs  general_info.txt
