[package]
name = "trading-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.104"
csv = "1.2.2"
chrono = "0.4.26"
polars = "0.32.0"
nalgebra = "0.32.3"
