[package]
name = "data-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
scraper = "0.12.0"
